# Camel-Snake-Util

./: .gitignore  .gitmodules  CMakeLists.txt
src/: Application.cpp  Application.h  camel2snake.cc  main.cpp  snake2camel.cc
src/Authenticator/: touch_id_auth.h  touch_id_auth.mm
src/Certificates/Windows/: CertificateGeneratorWindow.cpp  CertificateGeneratorWindow.h
src/Gitlab/: GitlabManager.cpp  GitlabManager.h
src/Opcua/: NodeWindow.cpp  NodeWindow.h  Server.cpp  Server.h  ServerManagerWindow.cpp  ServerManagerWindow.h
src/Windows/: CertificateGenerator.cpp  CertificateGenerator.h
